# toponn

./: .gitignore  Cargo.toml  NOTICE  README  README.md  hdf5_writer.go  realizer.go  tensor_builder.go  train.go  writer.go
cmd/common/: args.go  common.go  config.go  io.go
cmd/toponn-tag/: main.go
cmd/toponn-train/: main.go
example/: topo.conf
label/: labels.go
python/: dump.py  model.py  tf-train.py
toponn/: Cargo.toml
toponn-utils/: Cargo.toml
toponn-utils/src/: config.rs  config_tests.rs  error.rs  lib.rs  process.rs  serialization.rs
toponn-utils/tensorflow/: config.py  conv_model.py  data.py  dump.py  model.py  rnn_model.py  tf-train.py  weight_norm.py  write-graph
toponn-utils/testdata/: topo.conf
toponn/src/: collector.rs  error.rs  input.rs  lib.rs  numberer.rs  tag.rs  writer.rs
toponn/src/tensorflow/: collector.rs  lr.rs  mod.rs  tagger.rs  tensor.rs
