[package]
name = "toponn"
version = "0.1.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]

[dependencies]
conllx = "0.10"
failure = "0.1"
itertools = "0.6"
protobuf = "1.4"
serde = "1"
serde_derive = "1"
tf-embed = { git = "https://github.com/danieldk/tf-embed-rs", tag = "v0.5.0" }
tf-proto = { git = "https://github.com/danieldk/tf-proto-rs", tag = "v1.4.0" }
tensorflow = "0.11"
